<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <RelativeLayout
                android:id="@+id/content_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_above="@+id/content_set_data"
                android:padding="10dp">
            <TextView
                    android:id="@+id/text_view_chip_only_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_card"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/text_view_current_balance_only_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_balance"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/text_view_chip_only_text"/>
            <TextView
                    android:id="@+id/text_view_current_number_card_only_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_card"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/text_view_current_balance_only_text"/>
            <TextView
                    android:id="@+id/text_view_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap"/>
            <TextView
                    android:id="@+id/text_view_current_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/text_view_chip"
                    android:layout_alignParentEnd="true"/>
            <TextView
                    android:id="@+id/text_view_current_number_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_below="@id/text_view_current_balance"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/content_set_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/image_samurai"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp">
            <EditText
                    android:id="@+id/edit_text_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:hint="@string/type_new_balance"/>
            <EditText
                    android:id="@+id/edit_text_number_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_text_balance"
                    android:layout_centerInParent="true"
                    android:inputType="number"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:hint="@string/edit_number_card"/>
            <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_text_number_card"
                    android:layout_centerInParent="true"
                    android:text="@string/clear"/>
        </RelativeLayout>
        <ImageView
                android:id="@+id/image_samurai"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:baselineAlignBottom="true"
                android:src="@drawable/cyberpunk_demon"
                android:contentDescription="@string/app_name"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
